# flet-wcolors

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: example_1.py  example_2.py
src/flet_wcolors/: __init__.py  wcolors.py
tests/: test_colors.py
