[tool.poetry]
name = "flet-wcolors"
version = "1.1.2"
description = "help the developer to get many colors without remembering their hex value, and I think it's helpful to get the color with names this will be clear in the code instead hex value!"
authors = ["Osama Mohammed <osamalzabidi@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = [
    "colors",
    "web",
    "hex",
    "name",
    "flet",
    "toolkit",
    "tools"
]
packages = [{ include = "flet_wcolors", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flet = ">=0.25.2,<=0.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
